# Market-Risk-Engine

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  app.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.streamlit/: config.toml
configs/: demo.yaml  risk_stress.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  ASSUMPTIONS.md  CONFIG_REFERENCE.md  DEBUGGING_GUIDE.md  DEMO_WALKTHROUGH.md  DEPENDENCY_POLICY.md  DESIGN_DECISIONS.md  FAQ.md  FINAL_REVIEW_CHECKLIST.md  GITHUB_PROFILE_SETUP.md  IMPLEMENTATION_AUDIT.md  INTERVIEW_NOTES.md  PERFORMANCE_NOTES.md  PLATFORM_NOTES.md  PORTFOLIO_CASE_STUDY.md  PROJECT_MASTER_BLUEPRINT.md  PROJECT_SELECTION_BRIEF.md  PROJECT_STATUS.md  README.md  RECRUITER_BRIEF.md  REQUIREMENTS_TRACEABILITY.md  RESUME_SNIPPETS.md  REVIEWER_GUIDE.md  SAMPLE_OUTPUT.md  TECH_STACK_AND_ARCHITECTURE.md  TESTING_STRATEGY.md  VALIDATION_NOTES.md  VERSIONING.md
docs/assets/: README.md
docs/features/: 01-config-driven-cli.md  02-market-simulation.md  03-black-scholes-pricing.md  04-greeks-calculation.md  05-simple-fake-strategy.md  06-fake-execution.md  07-portfolio-tracker.md  08-risk-manager.md  09-reporting.md  10-tests.md  11-benchmark.md  12-polished-readme.md  README.md
docs/sample_outputs/: README.md  artifact_manifest.md  chart_artifacts.md  csv_contracts.md  risk_stress_demo.md  run_metadata_example.md  summary_report_excerpt.md
pyrisklab/: __init__.py
scripts/: local_verify.py
src/pyrisklab/: __init__.py  __main__.py  _version.py  analytics.py  application_service.py  benchmark.py  cli.py  config.py  exceptions.py  execution.py  greeks.py  market.py  models.py  pipeline.py  portfolio.py  pricing.py  reporting.py  risk.py  scenarios.py  strategy.py
tests/: conftest.py  test_application_service.py  test_benchmark.py  test_cli.py  test_config.py  test_exceptions.py  test_execution.py  test_greeks.py  test_local_verify.py  test_market.py  test_packaging_metadata.py  test_pipeline_smoke.py  test_portfolio.py  test_pricing.py  test_readme_contract.py  test_repo_hygiene.py  test_reporting.py  test_risk.py  test_strategy.py
