[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrisklab"
version = "0.1.0"
description = "Local Python options-pricing and risk-simulation engine."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Muni Ul" },
]
keywords = ["options", "risk", "simulation", "benchmark", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "PyYAML",
]

[project.urls]
Repository = "https://github.com/muni-ul/Market-Risk-Engine"
Documentation = "https://github.com/muni-ul/Market-Risk-Engine/tree/main/docs"
Issues = "https://github.com/muni-ul/Market-Risk-Engine/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
pyrisklab = "pyrisklab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
