[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrisklab"
version = "0.1.0"
description = "Local Python simulation, risk validation, and reporting engine."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Muni Ul" },
]
keywords = [
    "options",
    "risk",
    "simulation",
    "benchmark",
    "cli",
    "testing",
    "automation",
    "performance",
    "validation",
    "reporting",
    "reproducibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "PyYAML",
]

[project.urls]
Repository = "https://github.com/muni-ul/Market-Risk-Engine"
Documentation = "https://github.com/muni-ul/Market-Risk-Engine/tree/main/docs"
Reviewer-Guide = "https://github.com/muni-ul/Market-Risk-Engine/blob/main/docs/REVIEWER_GUIDE.md"
Changelog = "https://github.com/muni-ul/Market-Risk-Engine/blob/main/CHANGELOG.md"
Support = "https://github.com/muni-ul/Market-Risk-Engine/blob/main/SUPPORT.md"
Issues = "https://github.com/muni-ul/Market-Risk-Engine/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
pyrisklab = "pyrisklab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyrisklab = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
